--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "momment": "0.0.1",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
